[FSA-195] - Corrected colour contrast

--- a/docroot/themes/custom/fsa/src/component/content/content.css
+++ b/docroot/themes/custom/fsa/src/component/content/content.css
@@ -392,9 +392,9 @@ table {
         left: 0;
         top: 0.07em;
         border-radius: 50%;
-        background-color: var(--primary-color);
+        background-color: var(--color-dark-teal);
         transform: scale(0.3333);
-        box-shadow: inset 0 0 0 2px var(--primary-color);
+        box-shadow: inset 0 0 0 2px var(--color-dark-teal);
       }
     }
   }
